# Argon2id

./: .gitignore  .replit  app.py  pyproject.toml  readme.md  replit.md  requirements.txt  start.sh
attached_assets/: Pasted-Build-a-complete-end-to-end-project-titled-Performance-Analysis-and-Parameter-Optimization-of-Argon-1761476374374_1761476374375.txt
static/css/: style.css
static/js/: main.js
templates/: base.html  benchmark.html  home.html  login.html  register.html
